--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 {% block content %}{% endblock %}
-<script src="{% static 'js/jquery-3.7.0.min.js.js' %}"></script>
+{#<script src="{% static 'js/jquery-3.7.0.min.js.js' %}"></script>#}
 {% block footer_refrences %}{% endblock %}
 </body>
 </html>
