--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,18 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa-IR" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}{% endblock %}</title>
-    <style>
-        *{
-            font-family: Vazirmatn;
-        }
-    </style>
-    {% block header_refrences %}{% endblock %}
+    <title>{% block title %}{% endblock %} | سامانه رزرو سالن </title>
+    {% include 'inc/header_links.html' %}
+    {% block header_references %}{% endblock %}
 </head>
 <body>
 {% block content %}{% endblock %}
-{#<script src="{% static 'js/jquery-3.7.0.min.js.js' %}"></script>#}
-{% block footer_refrences %}{% endblock %}
+{% include 'inc/footer_links.html' %}
+{% block footer_references %}{% endblock %}
 </body>
 </html>
