add holiday price

--- a/reservations/templates/reservations/reserve_table.html
+++ b/reservations/templates/reservations/reserve_table.html
@@ -63,7 +63,11 @@
                                     {% else %}
                                         <a href="{% url "reservations:detail" reserve_date=date reserve_time=sons_time.time %}">
                                             <div class="open-box">
+                                                {% if date|check_holiday_price %}
+                                                <span>{{ sons_time.holiday_price|three_digits_currency }} تومان</span>
+                                                {% else %}
                                                 <span>{{ sons_time.price|three_digits_currency }} تومان</span>
+                                                {% endif %}
                                                 <strong>رزرو کنید!</strong>
                                             </div>
                                         </a>
